--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,7 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".ResultActivity"
+            android:name=".resultActivity.ResultActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
